[project]
name = "autochatgpt"
version = "1.0.0"
description = "Automate interaction with the browser version of ChatGPT."
authors = [
    { name = "Ryusei", email = "dev.ryusei@gmail.com" }
]
dependencies = [
    "selenium~=4.8.3",
    "undetected-chromedriver~=3.4.6",
    "python-dotenv~=1.0.0",
    "jupyterlab~=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=7.3.1",
    "notebook~=6.5.4",
    "jupyter~=1.0.0",
    "pyproject-flake8~=5.0.4.post1",
    "flake8-bugbear~=23.3.12",
    "flake8-docstrings~=1.7.0",
    "black[jupyter]~=23.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.poetry]
name = "autochatgpt"
version = "1.0.0"
description = ""
authors = ["RyuseiIshida <dev.ryusei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.3"
undetected-chromedriver = "^3.4.6"
jupyterlab = "^3.6.3"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
notebook = "^6.5.4"
jupyter = "^1.0.0"
pyproject-flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-docstrings = "^1.7.0"
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
mypy = "^1.2.0"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
